=== randtoolbox: an R package for random number generation and testing ===

Version 1.13
=============

- remove obsolete LICENCE file and put its content in this file.
- this version is one of the last versions working with
package rngWELL >= 0.11-0.

NOTES FIXES

- remove NOTES appearing in R CMD check

Version 1.12
=============

NEW FEATURES

- add new test files.
- increase the possible dimension of Halton sequences.

WARNING FIXES in Fortran files

- remove an array over-run (reported by Brian Ripley) and tab 
characters in LowDiscrepancy.f.


Version 1.11
=============

- this version is one of the last versions working with
package rngWELL == 0.10-x.

NOTE FIXES

- this version use packageStartupMessage function for the .onAttach
rather than the cat function. 
- remove a printf in KnuthTAOCP2002.c

WARNING FIXES in C files

- remove warnings with Wall and pedantic gcc options. For this
purpose, files randtoolbox/src/Makevars and rngWELL/src/Makevars
now contain a line, uncommenting which includes Wall and pedantic.

See https://stat.ethz.ch/pipermail/r-sig-mac/2008-August/005251.html


BUG FIXES
- the package crashes when the dimension was 0 in RNG functions, 
reported by David LeBauer.


Version 1.10
=============

NEW FEATURES

- update the man page pseudoRNG.Rd and quasiRNG.Rd with MT19937
and other minor improvements.
- on loading, the package print the overview man page.

WARNING FIXES

- fix some warnings following the release of R 2.13.0: 
the Makefile and the man page of runifInterface.
- fix a warning in the MT19937 file.

BUG FIXES

- remove implicit type declaration in the LowDiscrepancy fortran file,
which causes errors with GCC 4.6 compilers.


Version 1.09
=============

NEW FEATURES

- start runif interface for congruential generator and WELL RNG,
- vignette contains two chapters,
- start to test true randomness (not included in this version),
- increase the speed and accuracy of Halton and Sobol sequences.

STRUCTURAL CHANGE
