@@ -78,7 +78,7 @@ void R_init_randtoolbox(DllInfo *info)
         //register method accessed with .Call
         R_registerRoutines(info, NULL, callMethods, NULL, NULL); 
 		
-        //make randtoolbox C functions available from other packages
+        //make randtoolbox C functions available for other packages
         R_RegisterCCallable("randtoolbox", "torus", (DL_FUNC) torus);
         R_RegisterCCallable("randtoolbox", "setSeed", (DL_FUNC) setSeed);
         R_RegisterCCallable("randtoolbox", "congruRand", (DL_FUNC) congruRand);
@@ -90,8 +90,8 @@ void R_init_randtoolbox(DllInfo *info)
 		//retrieve WELL rng entry point in the rngWELL pkg
 		WELLrng = (void (*) (double *, int, int, int, int, int)) R_GetCCallable("rngWELL", "WELLrng");
 		WELL_get_set_entry_point =(void (*) (void (*)())) R_GetCCallable("rngWELL", "WELL_get_set_entry_point");
-		getRngWELL = (void (*) (int *, int *, unsigned int *)) R_GetCCallable("rngWELL", "getRngWELL");
+		/*getRngWELL = (void (*) (int *, int *, unsigned int *)) R_GetCCallable("rngWELL", "getRngWELL");
 		putRngWELL = (void (*) (int *, int *, unsigned int *)) R_GetCCallable("rngWELL", "putRngWELL");
-		initMT2002 = (void (*) (unsigned int *, int *, unsigned int *)) R_GetCCallable("rngWELL", "initMT2002");
+		initMT2002 = (void (*) (unsigned int *, int *, unsigned int *)) R_GetCCallable("rngWELL", "initMT2002");*/
 }
 
